2009-05-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-27-01
	* diff: fill 'Old Configuration' pull-down menu with current
	configuration and all its past versions
	* bugfix to ParameterComparison.toString()

2009-05-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-27-00
	* gui: display configuration snippet in python
	* gui: omit warning message when closing unchanged configurations
	containing streams/datasets
	* gui: improve default for 'Old Configuration' in diff dialog
	* gui: allow admins to unlock all configurations
	* cnv: include output-modules in --cff mode
	* db: speed up ConfDB.loadConfigurationTree()
	* diff: fix exception occuring for configs with streams/datasets
	* diff: report parameter to be changed if trackiness changed

2009-04-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-06
	* fixes to gui/OutputModuleEditor requested by Bryan
	* add FEDRawDataCollection kepp statements for both source and
	rawDataCollector
	* add the vstring parameter 'SelectEvents' within the PSet
	parameter 'SelectEvents' for output modules being edited, if they
	don't exist

2009-02-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-05
	* fix converter/summary/ascii/data, Integer -> Long for prescales

2009-01-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-04
	* fix release migration, which couldn't handle removed esmodules,
	services, etc.
	* parser: add protection against duplicate addition of
	appendToDataLabel parameter (Jonathan)

2008-12-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-03
	* fix provided by Ulf for online python migration

2008-11-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-02
	* fix bug in PrescaleTable (adjustment necessary to VUint32 being
	modelled using Long now)
	* OnlineConverter: only check that MessageLogger.destinations